maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:33: error: type mismatch;
 found   : Unit
 required: Boolean
	if(direction(Direction.NORD)){
                    ^